<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="6dp" >
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp">
        
        <TableRow>
            
			<CheckBox
				android:id="@+id/checkBoxProdutoCarrinho"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true" />
			
			<TextView 
				android:id="@+id/textViewProdutoNome"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#696969"
				android:layout_marginLeft="4dp"
				android:textSize="20sp"  />
		
		</TableRow>
			
	</TableLayout>

	<EditText
	    android:background="@layout/edit_text_default"
	    android:textSize="22sp"
	    android:id="@+id/editTextValorProduto"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="numberDecimal"
	    android:hint="@string/r_valor_produto" />
	
	<!-- Implementar de forma dinâmica -->
	<RadioGroup 
	    android:id="@+id/radioGOptionUN"
	    android:layout_marginTop="10sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		
				
	</RadioGroup>
	
	<TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent" >

	    <TableRow >
			<EditText
			    android:id="@+id/editTextQtdeProduto"
			    android:background="@layout/edit_text_default"
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
		        android:inputType="numberDecimal"
			    android:hint="@string/quantidade" />
			
			<CheckBox
				android:id="@+id/checkBoxMaisQtde"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mais_qtde" />
		</TableRow>
	</TableLayout>
	
	<TextView 
	    android:id="@+id/textViewValorTotal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
	    android:text="@null"/>
    
</LinearLayout>